# dashj-bls-signatures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-bls-signatures.sh  gen-java-wrapper.sh  run-java.sh
src/: bls-dash.i  bls-signatures.i  blssignatures.h  vector.i
src/cpp/: bls-dash-core-wrapper.cpp  bls-signature-wrapper.cpp  bls.h  dashj-bls-signature-wrapper.cpp  dashj-bls-signature-wrapper.cpp.bak  org_dash_bls_BLSPublicKey.cpp  org_dash_bls_BLSPublicKey.h  org_dash_bls_DashBlsJni.cpp  org_dash_bls_DashBlsJni.h  swig-bls-signature-wrapper.cpp  swig-bls-signature-wrapper.cpp.bak
src/java/org/dash/bls/: BLSObject.java  BLSPublicKey.java  DashBlsJni.java  DashBlsJniSimple.java
src/java/org/dash/blssignatures/: AggregationInfo.java  BLS.java  BLSObject.java  BigIntegerVec.java  ByteArrayVec.java  ByteArrayVector.java  ChainCode.java  ExtendedPrivateKey.java  ExtendedPublicKey.java  InsecureSignature.java  InsecureSignatureVector.java  PrivateKey.java  PrivateKeyVec.java  PublicKey.java  PublicKeyVec.java  PublicKeyVector.java  SWIGTYPE_p_AggregationInfo.java  SWIGTYPE_p_ExtendedPublicKey.java  SWIGTYPE_p_InsecureSignature.java  SWIGTYPE_p_PrivateKey.java  SWIGTYPE_p_PublicKey.java  SWIGTYPE_p_Signature.java  SWIGTYPE_p_bn_t.java  SWIGTYPE_p_g1_t.java  SWIGTYPE_p_g2_t.java  SWIGTYPE_p_std__vectorT_PublicKey_t.java  SWIGTYPE_p_std__vectorT_bls__AggregationInfo_t.java  SWIGTYPE_p_std__vectorT_bls__InsecureSignature_t.java  SWIGTYPE_p_std__vectorT_bls__PrivateKey_t.java  SWIGTYPE_p_std__vectorT_bls__PublicKey_t.java  SWIGTYPE_p_std__vectorT_bls__Signature_t.java  SWIGTYPE_p_std__vectorT_bn_t_p_t.java  SWIGTYPE_p_std__vectorT_size_t_t.java  SWIGTYPE_p_std__vectorT_uint8_t_const_p_t.java  SWIGTYPE_p_std__vectorT_uint8_t_p_t.java  SWIGTYPE_p_std__vectorT_uint8_t_t.java  SWIGTYPE_p_std__vectorT_unsigned_char_const_p_t.java  SWIGTYPE_p_std__vectorT_unsigned_char_p_t.java  SWIGTYPE_p_std__vectorT_unsigned_char_t.java  SWIGTYPE_p_uint32_t.java  (+7 more)
src/java/org/dash/swigbls/: AggregationInfo.java  BLS.java  BigIntegerVector.java  ByteArrayVector.java  ChainCode.java  ExtendedPrivateKey.java  ExtendedPublicKey.java  InsecureSignature.java  PrivateKey.java  PrivateKeyVector.java  PublicKey.java  PublicKeyVector.java  SWIGTYPE_p_AggregationInfo.java  SWIGTYPE_p_ExtendedPublicKey.java  SWIGTYPE_p_InsecureSignature.java  SWIGTYPE_p_PrivateKey.java  SWIGTYPE_p_PublicKey.java  SWIGTYPE_p_Signature.java  SWIGTYPE_p_bn_t.java  SWIGTYPE_p_g1_t.java  SWIGTYPE_p_g2_t.java  SWIGTYPE_p_std__vectorT_PublicKey_t.java  SWIGTYPE_p_std__vectorT_bls__AggregationInfo_t.java  SWIGTYPE_p_std__vectorT_bls__InsecureSignature_t.java  SWIGTYPE_p_std__vectorT_bls__Signature_t.java  SWIGTYPE_p_std__vectorT_size_t_t.java  SWIGTYPE_p_std__vectorT_unsigned_char_const_p_t.java  Signature.java  (+5 more)
(+16 files in other folders)
